Bug 329269 - Inline OpenPGP emails get decrypted automatically while viewing.
Summary: Inline OpenPGP emails get decrypted automatically while viewing.
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.12 pre
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-27 08:10 UTC by Bernhard Scheirle
Modified: 2014-04-17 11:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: : 4.13.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Scheirle 2013-12-27 08:10:03 UTC
Inline OpenPGP emails get decrypted automatically while viewing, although the option "Attempt decryption of encrypted messages when viewing" is NOT set.

Reproducible: Always

Steps to Reproduce:
1. New Message
2. Options -> Encrypt Message
3. Options -> Cryptographic Message Format -> Inline OpenPGP
4. And send it to yourself
Actual Results:  
The message gets automatically encrypted while viewing.

Expected Results:  
The message gets not encrypted and instead displays "This message is encrypted." …
Comment 1 Sandro Knauß 2014-04-17 11:47:59 UTC
Git commit 9ff49c4b16bdb4c111c9a08955105cd062433cae by Sandro Knauß.
Committed on 29/03/2014 at 13:47.
Pushed by knauss into branch 'KDE/4.13'.

Fix 329269: Inline OpenPGP uses decryptMessage.

* Add tests
REVIEW: 117153
FIXED-IN:: 4.13.1

M  +35   -0    messageviewer/tests/unencryptedmessagetest.cpp
M  +1    -1    messageviewer/viewer/objecttreeparser.cpp

http://commits.kde.org/kdepim/9ff49c4b16bdb4c111c9a08955105cd062433cae