Fix 329269: Inline OpenPGP uses decryptMessage.

* Add tests

BUG: 329269
REVIEW: 117153
FIXED-IN:: 4.13.1